--- a/new_progress.ipynb
+++ b/new_progress.ipynb
@@ -56,7 +56,7 @@
       },
       "source": [
         "import pandas as of\n",
-        "!wget \"https://he-s3.s3.amazonaws.com/media/hackathon/hackerearth-deep-learning-challenge-friendship-day/friendship-goals-4-8aa488d0/a1c4eb20ce8711ea.zip?Signature=oG2SWA%2FmE0v1R6lVBFkBoo0E2tA%3D&Expires=1596553816&AWSAccessKeyId=AKIA6I2ISGOYH7WWS3G5\""
+        "!wget \"https://he-s3.s3.amazonaws.com/media/hackathon/hackerearth-deep-learning-challenge-friendship-day/friendship-goals-4-8aa488d0/a1c4eb20ce8711ea.zip""
       ],
       "execution_count": 1,
       "outputs": [
